frontend/test/should_pass/dangle_003.grg
rule r {
	x: Node;
	y: Node;

	a: Node;
	b: Node;
	c: Node;
	d: Node;

	x -e:Edge-> y;
	x -ee:Edge-> y;
	y -f:Edge->;
	y <-g:Edge-;
	y <-gg:Edge-;

	-h:Edge->;
	<-i:Edge-;
	-j:Edge->;

	a -k:Edge->;
	b -l:Edge->;
	-m:Edge->;

	replace{
		y;
		x-e->;
		<-ee-;
		<-f-;
		-g-> y <-gg-;

		-h->;
		-i->;
		<-j-;

		b;
	}
}
