frontend/test/should_fail/reuse_001.grg
rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	replace{
		y;
		x-e->.;
	}
}
